--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     }
   },
   "peerDependencies": {
-    "react": "^15.0.0 | ^16.8.6",
-    "react-dom": "^15.0.0 | ^16.8.6",
+    "react": "^15.6.0 || ^16.8.6",
+    "react-dom": "^15.6.0 || ^16.8.6",
     "react-hover-observer": "^2.1.1",
     "react-virtualized": "^9.21.1",
     "classnames": "^2.2.6",
